--- a/CookBook.Models/CookBook.Models.csproj
+++ b/CookBook.Models/CookBook.Models.csproj
@@ -15,5 +15,9 @@
     <ProjectReference Include="..\Repository.Pattern.Core\Repository.Pattern.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 
 </Project>
